--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -1,17 +1,46 @@
 cluster:
-  clusterName: ""
-  environmentGitOwner: ""
-  project: ""
+  clusterName: cosmin-cjxd
+  environmentGitOwner: ccojocar
+  gitKind: github
+  gitName: github
+  gitServer: https://github.com
+  namespace: jx
+  project: jx-development
   provider: gke
-  zone: ""
-gitops: true
+  zone: europe-west1-b
 environments:
-- key: dev
-- key: staging
-- key: production
+- ingress:
+    domain: ""
+    externalDNS: false
+    namespaceSubDomain: ""
+    tls:
+      email: ""
+      enabled: false
+      production: false
+  key: dev
+- ingress:
+    domain: ""
+    externalDNS: false
+    namespaceSubDomain: ""
+    tls:
+      email: ""
+      enabled: false
+      production: false
+  key: staging
+- ingress:
+    domain: ""
+    externalDNS: false
+    namespaceSubDomain: ""
+    tls:
+      email: ""
+      enabled: false
+      production: false
+  key: production
+gitops: true
 ingress:
-  domain: ""
+  domain: 34.76.112.242.nip.io
   externalDNS: false
+  namespaceSubDomain: -jx.
   tls:
     email: ""
     enabled: false
@@ -19,16 +48,20 @@ ingress:
 kaniko: true
 secretStorage: vault
 storage:
+  backup:
+    enabled: false
+    url: ""
   logs:
     enabled: true
-    url: ""
+    url: gs://cosmin-cjxd-logs-e2b857c8-f5cd-45f9-9706-17f4ca54b82e
   reports:
     enabled: true
-    url: ""
+    url: gs://cosmin-cjxd-reports-8d8f0c56-e4b6-4f36-a870-82cdc737372
   repository:
     enabled: true
-    url: ""
+    url: gs://cosmin-cjxd-repository-e4c8e5f2-eb30-4453-a2a0-dfe94af7
+velero: {}
 versionStream:
-  ref: 0c3237feef3846fdfc7f17d4f5946017882414e2
-  url: https://github.com/cloudbees/cloudbees-jenkins-x-versions.git
+  ref: update-release
+  url: https://github.com/ccojocar/cloudbees-jenkins-x-versions.git
 webhook: prow
