--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -62,6 +62,6 @@ storage:
     url: gs://cosmin-cjxd-repository-e4c8e5f2-eb30-4453-a2a0-dfe94af7
 velero: {}
 versionStream:
-  ref: update-release
+  ref: 57adb2f9c9bdcf9dab17eda1c003ba303ef5edd8
   url: https://github.com/ccojocar/cloudbees-jenkins-x-versions.git
 webhook: prow
